Fix : Color popup alignment

--- a/inc/customizer/custom-controls/assets/css/unminified/color-palette-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color-palette-rtl.css
@@ -15,7 +15,7 @@
 	position: absolute;
 	z-index: 1;
 	left: 0;
-	width: 21em;
+	width: 100%;
 	display: none;
 }
 
@@ -47,6 +47,7 @@
 	grid-template-columns: repeat(9, 1fr);
 	align-items: center;
 	position: relative;
+	gap: 2px;
 }
 
 .ast-single-palette-wrap
